# Suspicious_Study_Abroad_Ads_Detection

./: .env.example  .gitignore  README.md  SYNTAX_CHECK_OK.txt  VERSION.txt  pyproject.toml  repo_file_manifest.txt  requirements-cpu.txt  requirements-gpu-cu128.txt  requirements.txt
configs/: project_config.example.yaml
data/: README.md
data/prepared/: PREPARED_DATA_MANIFEST.json  binary_gold_eval.csv  ner_re_gold_annotated_subset.json  normalized_posts.csv  silver_pool.csv
docs/: DATA_SCHEMA.md  GPU_CPU_SETUP.md  MIGRATION_GUIDE.md  PIPELINE_IO.md  PREPARED_DATA_RUN.md  PROJECT_STRUCTURE.md
notebooks/: 00_run_from_prepared_data.ipynb  01_collect_legitimate_seed_posts.ipynb  02_discover_and_crawl_suspicious_candidates.ipynb  03_preprocess_and_build_gold_splits.ipynb  04_train_ner_re_extractor.ipynb  05_build_weak_labels.ipynb  06_train_and_evaluate_classifier.ipynb
scripts/: check_torch_device.py  migrate_existing_project.py  run_pipeline.sh  run_pipeline_windows.ps1  run_prepared_data_pipeline.py  run_prepared_data_pipeline.sh  run_prepared_data_pipeline_windows.ps1  setup_environment.py  setup_environment_windows.ps1
secrets/: README.md
src/annotation/: build_binary_gold_split.py
src/collection/: __init__.py  crawl_legitimate_posts.py  crawl_suspicious_posts.py  discover_suspicious_accounts.py  save_instagram_session.py
src/extraction/: train_ner_re_extractor.py
src/modeling/: train_classifier.py
src/preprocessing/: build_normalized_dataset.py
src/utils/: paths.py
src/weak_labeling/: build_weak_labels.py
